--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "web-vitals": "^1.0.1"
   },
